# sec_audit_framework

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  result.json  results.json  sec_audit.py  test.json
checks/: __init__.py  app_checks.py  container_checks.py  host_checks.py  webserver_checks.py
examples/: hardened_flask_lms.yml  weak_flask_lms.yml
remediation/: auto_fix.py  generator.py  llm.py  templates.py
reporting/: __init__.py  pdf_generator.py  summary.py
scanners/: __init__.py  compose_scanner.py  docker_scanner.py  http_scanner.py  nginx_scanner.py  ssh_scanner.py
sec_audit/: __init__.py  baseline.py  cli.py  config.py  results.py  telemetry.py
tests/: __init__.py  test_branch_logic.py  test_checks.py  test_remediation.py  test_reporting.py
